<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.av</groupId>
	<artifactId>jackwicket</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Jackwicket</name>
	<description>Simple  web application build on Apache Jackrabbit OCM and Apache Wicket. Jackwicket is only an demo, it's not build for production environment and it's not (yet) a best practices demo.</description>
	<url>http://www.alessandro.vincelli.name/jackwicket</url>
	<ciManagement>
		<system>Hudson</system>
		<url>http://www.alessandro.vincelli.name/hudson</url>
	</ciManagement>
	<developers>
		<developer>
			<id>a.vincelli</id>
			<name>Alessandro Vincelli</name>
			<email>a.vincelli@gmail.com</email>
			<url>http://www.alessandro.vincelli.name/</url>
			<organization>Foundation ICTU</organization>
			<organizationUrl>http://www.ictu.nl</organizationUrl>
			<timezone>+1</timezone>
			<roles>
			</roles>
		</developer>
	</developers>
	<organization>
		<name>Alessandro Vincelli</name>
		<url>http://www.alessandro.vincelli.name</url>
	</organization>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<repositories>
		<repository>
			<id>alessandro.vincelli</id>
			<name>Alessandro Vincelli's personal repo</name>
			<url>http://www.alessandro.vincelli.name/maven</url>
		</repository>
		<repository>  
	    	<id>se-jcr-repo</id>  
			<name>se-jcr-repo</name>  
			<url>https://src.springframework.org/svn/se-jcr/repo/</url>  
		</repository> 
	</repositories>
	<dependencies>
		<!--  WICKET DEPENDENCIES -->
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-extensions</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-spring</artifactId>
			<version>${wicket.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-datetime</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
          <groupId>org.apache.jackrabbit</groupId>
          <artifactId>jackrabbit-core</artifactId>
          <version>1.5.6</version>
        </dependency>
		<dependency>
          <groupId>org.apache.jackrabbit</groupId>
          <artifactId>jackrabbit-ocm</artifactId>
          <version>1.5.3</version>
        </dependency>
		<dependency>
          <groupId>org.apache.jackrabbit</groupId>
          <artifactId>jackrabbit-jcr-commons</artifactId>
          <version>1.5.5</version>
        </dependency>
		<dependency>
            <groupId>org.apache.jackrabbit</groupId>
            <artifactId>jackrabbit-jca</artifactId>
            <version>1.5.6</version>
        </dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>2.5.6.SEC01</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring</artifactId>
			<version>2.5.6.SEC01</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>2.5.6.SEC01</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>2.5.6.SEC01</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>2.5.6.SEC01</version>
			<scope>test</scope>
			<!-- <scope>provided</scope> -->
		</dependency>
		<dependency>
          <groupId>javax.jcr</groupId>
          <artifactId>jcr</artifactId>
          <version>1.0</version>
        </dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.6</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-management</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
		 	<artifactId>easymockclassextension</artifactId>
		 	<version>2.4</version>
		 	<scope>test</scope>
		 </dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>se-jcr</artifactId>
			<version>0.9</version>
		</dependency>
		<!-- JACKRABBIT -->   
		<!-- SPRING -->

		<!-- LOGGING DEPENDENCIES - LOG4J -->

		<!--  JUNIT DEPENDENCY FOR TESTING -->

		<!--  JETTY DEPENDENCIES FOR TESTING  -->
	</dependencies>
	<scm>
		<url>http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</url>
		<connection>scm:svn:http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</connection>
    	<developerConnection>scm:svn:http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</developerConnection>
	</scm>
	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<filtering>false</filtering>
				<directory>src/test/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimise>true</optimise>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<configuration>
					<contextPath>/</contextPath>
					<scanIntervalSeconds>6</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>8889</port>
							<maxIdleTime>30000</maxIdleTime>
						</connector>
					</connectors>
					<systemProperties>
						<systemProperty>
							<name>JAVA_OPTS</name>
							<value>-Xms256m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.cargo</groupId>
				<artifactId>cargo-maven2-plugin</artifactId>
				<version>1.0-beta-2</version>
					<configuration>
					<container>
						<containerId>tomcat6x</containerId>
						<type>remote</type>
					</container>
					<configuration>
						<type>runtime</type>
						<properties>
							<cargo.tomcat.manager.url>http://localhost:8092/manager</cargo.tomcat.manager.url>
							<cargo.remote.username>username</cargo.remote.username>
							<cargo.remote.password>password</cargo.remote.password>
						</properties>
					</configuration>
					<deployer>
						<type>remote</type>
						<deployables>
							<deployable>
								<properties>
									<context>jackwicket</context>
								</properties>
							</deployable>
						</deployables>
					</deployer>
				</configuration>
			</plugin>
		</plugins>
	</build>	
	<reporting>
	    <plugins>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-project-info-reports-plugin</artifactId>
	        <configuration>
	          <webAccessUrl>http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</webAccessUrl>
	          <anonymousConnection>scm:svn:http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</anonymousConnection>
	          <developerConnection>scm:svn:http://www.alessandro.vincelli.name/svn/deals-3/jackwicket</developerConnection>
	        </configuration>
	      </plugin>
	      <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>2.5</version>
			<reportSets>
				<reportSet>
					<id>html</id>
					<configuration>
						<doctitle>${project.name} ${project.version} API</doctitle>
						<windowtitle>${project.name} ${project.version} API</windowtitle>
					</configuration>
					<reports>
						<report>javadoc</report>
					</reports>
				</reportSet>
				<reportSet>
					<id>test-html</id>
					<configuration>
						<testDoctitle>${project.name} ${project.version} Test API</testDoctitle>
						<testWindowtitle>${project.name} ${project.version} Test API</testWindowtitle>
					</configuration>
					<reports>
						<report>test-javadoc</report>
					</reports>
				</reportSet>
			</reportSets>
			</plugin>
	    </plugins>
  	</reporting>
	<properties>
		<wicket.version>1.4.6</wicket.version>
		<jetty.version>6.1.4</jetty.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
